Remove the integration of the deprecated RestHighLevelClient.